// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Defer/Stream defers the nested fields: defer-nested-fields 1`] = `
[
  {
    "data": {
      "users": [
        {
          "id": "1",
          "name": "Ada Lovelace",
        },
        {
          "id": "2",
          "name": "Alan Turing",
        },
      ],
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [],
      },
      {
        "id": "1",
        "path": [
          "users",
          0,
        ],
      },
      {
        "id": "2",
        "path": [
          "users",
          1,
        ],
      },
    ],
  },
  {
    "completed": [
      {
        "id": "0",
      },
      {
        "id": "3",
      },
      {
        "id": "4",
      },
    ],
    "hasNext": true,
    "incremental": [
      {
        "data": {
          "posts": [
            {
              "author": {
                "id": "1",
                "posts": [
                  {
                    "id": "1",
                    "title": "Hello, World!",
                  },
                ],
              },
              "id": "1",
              "title": "Hello, World!",
            },
            {
              "author": {
                "id": "2",
                "posts": [
                  {
                    "id": "2",
                    "title": "My Story",
                  },
                ],
              },
              "id": "2",
              "title": "My Story",
            },
          ],
        },
        "id": "0",
      },
      {
        "data": {
          "name": "Ada Lovelace",
        },
        "id": "3",
      },
      {
        "data": {
          "name": "Alan Turing",
        },
        "id": "4",
      },
    ],
    "pending": [
      {
        "id": "3",
        "path": [
          "posts",
          0,
          "author",
        ],
      },
      {
        "id": "4",
        "path": [
          "posts",
          1,
          "author",
        ],
      },
    ],
  },
  {
    "completed": [
      {
        "id": "1",
      },
      {
        "id": "2",
      },
      {
        "id": "5",
      },
      {
        "id": "6",
      },
      {
        "id": "7",
      },
      {
        "id": "8",
      },
    ],
    "hasNext": false,
    "incremental": [
      {
        "data": {
          "posts": [
            {
              "author": {
                "id": "1",
              },
              "id": "1",
            },
          ],
        },
        "id": "1",
      },
      {
        "data": {
          "posts": [
            {
              "author": {
                "id": "2",
              },
              "id": "2",
            },
          ],
        },
        "id": "2",
      },
      {
        "data": {
          "title": "Hello, World!",
        },
        "id": "5",
      },
      {
        "data": {
          "name": "Ada Lovelace",
        },
        "id": "6",
      },
      {
        "data": {
          "title": "My Story",
        },
        "id": "7",
      },
      {
        "data": {
          "name": "Alan Turing",
        },
        "id": "8",
      },
    ],
    "pending": [
      {
        "id": "5",
        "path": [
          "users",
          0,
          "posts",
          0,
        ],
      },
      {
        "id": "6",
        "path": [
          "users",
          0,
          "posts",
          0,
          "author",
        ],
      },
      {
        "id": "7",
        "path": [
          "users",
          1,
          "posts",
          0,
        ],
      },
      {
        "id": "8",
        "path": [
          "users",
          1,
          "posts",
          0,
          "author",
        ],
      },
    ],
  },
]
`;

exports[`Defer/Stream defers the root fields: defer-root-fields 1`] = `
[
  {
    "data": {},
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [],
      },
      {
        "id": "1",
        "path": [],
      },
    ],
  },
  {
    "completed": [
      {
        "id": "0",
      },
    ],
    "hasNext": true,
    "incremental": [
      {
        "data": {
          "users": [
            {
              "id": "1",
              "name": "Ada Lovelace",
              "posts": [
                {
                  "author": {
                    "id": "1",
                    "name": "Ada Lovelace",
                  },
                  "id": "1",
                  "title": "Hello, World!",
                },
              ],
            },
            {
              "id": "2",
              "name": "Alan Turing",
              "posts": [
                {
                  "author": {
                    "id": "2",
                    "name": "Alan Turing",
                  },
                  "id": "2",
                  "title": "My Story",
                },
              ],
            },
          ],
        },
        "id": "0",
      },
    ],
  },
  {
    "completed": [
      {
        "id": "1",
      },
    ],
    "hasNext": false,
    "incremental": [
      {
        "data": {
          "posts": [
            {
              "author": {
                "id": "1",
                "name": "Ada Lovelace",
                "posts": [
                  {
                    "id": "1",
                    "title": "Hello, World!",
                  },
                ],
              },
              "id": "1",
              "title": "Hello, World!",
            },
            {
              "author": {
                "id": "2",
                "name": "Alan Turing",
                "posts": [
                  {
                    "id": "2",
                    "title": "My Story",
                  },
                ],
              },
              "id": "2",
              "title": "My Story",
            },
          ],
        },
        "id": "1",
      },
    ],
  },
]
`;

exports[`Defer/Stream streams: stream 1`] = `
[
  {
    "data": {
      "usersStream": [],
    },
    "hasNext": true,
    "pending": [
      {
        "id": "0",
        "path": [
          "usersStream",
        ],
      },
    ],
  },
  {
    "hasNext": true,
    "incremental": [
      {
        "id": "0",
        "items": [
          {
            "id": "1",
            "name": "Ada Lovelace",
            "posts": [
              {
                "author": {
                  "id": "1",
                  "name": "Ada Lovelace",
                },
                "id": "1",
                "title": "Hello, World!",
              },
            ],
          },
        ],
      },
    ],
  },
  {
    "hasNext": true,
    "incremental": [
      {
        "id": "0",
        "items": [
          {
            "id": "2",
            "name": "Alan Turing",
            "posts": [
              {
                "author": {
                  "id": "2",
                  "name": "Alan Turing",
                },
                "id": "2",
                "title": "My Story",
              },
            ],
          },
        ],
      },
    ],
  },
  {
    "completed": [
      {
        "id": "0",
      },
    ],
    "hasNext": false,
  },
]
`;
